# erp

./: .env.template  .gitignore  .timetracker  Cargo.toml  Rocket.toml  api.md  api_server.service  build.sh  git_log.sh  package-lock.json  package.json  rollup.config.js  run.sh  test_products.csv  todo.md
bindings/: AuthInfo.ts  CreateStockUpdate.ts  Customer.ts  CustomerListRequest.ts  CustomerPatchRequest.ts  CustomerPostRequest.ts  CustomerPutRequest.ts  Expense.ts  ExpensePatchRequest.ts  ExpensePostRequest.ts  ExpenseReport.ts  ExpenseReportFilter.ts  ExpenseReportRequest.ts  FilterOperator.ts  InventoryItem.ts  InventoryItemListRequest.ts  InventoryItemPatchRequest.ts  InventoryItemPostRequest.ts  InventoryItemPutRequest.ts  ListFilter.ts  ListRange.ts  ListRequest.ts  ListSort.ts  ListUserData.ts  MultipleSettingsRequest.ts  Order.ts  OrderItem.ts  OrderItemPatchRequest.ts  OrderItemPostRequest.ts  OrderItemUpdateRequest.ts  OrderMeta.ts  OrderPatchRequest.ts  OrderPostRequest.ts  OrderReport.ts  OrderReportFilter.ts  OrderReportRequest.ts  Payment.ts  PaymentMethod.ts  PaymentParty.ts  Product.ts  (+31 more)
frontend/: App.svelte  auth.js  main.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
frontend/db/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/db/src/: app.css  app.html
frontend/db/src/components/: CollapsibleWithArrowHeader.svelte  NavBar.svelte  (+4 more)
frontend/public/: layers.md  package.json  tailwind.config.js  tsconfig.json
frontend/public/src/: app.html
frontend/src/: app.css  app.html  app.scss  variables.scss
frontend/src/components/: FullscreenLoader.svelte  Loader.svelte  NavBar.svelte  PermissionGuard.svelte  ProductSearch.svelte  SearchDropdown.svelte  SideBar.svelte
frontend/src/lib/: auth.ts  backend.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
src/: auth.rs  db.rs  env.rs  main.rs  permissions.rs  schema.sql  search.rs  settings.rs
src/misc/: default_logo_high_res.txt  default_logo_low_res.txt
src/routes/: auth.rs  backup.rs  customers.rs  expenses.rs  inventory.rs  mod.rs  orders.rs  payments.rs  purchases.rs  reports.rs  search.rs  settings.rs  suppliers.rs
src/routes/public/: inventory.rs  mod.rs
src/types/: mod.rs  permissions.rs  product.rs
(+54 files in other folders)
