[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
serde_json = "1.0.113"
time = "0.2.27"
rocket = { version = "0.5.0", features = ["secrets", "serde_json", "json"] }
env_logger = "0.11.1"
rocket_cors = "0.6.0"
tokio-postgres = "0.7.10"
tokio = "1.36.0"
pollster = "0.3.0"
postgres-native-tls = "0.5.0"
