[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
serde_json = "1.0.113"
rocket = { version = "0.5.0", features = ["secrets", "serde_json", "json"] }
env_logger = "0.11.1"
rocket_cors = "0.6.0"
pollster = "0.3.0"
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
# Needed because the sqlx in rocket_db_pools does not have the macros feature enabled
sqlx = { version = "*", default-features = false, features = [
    "macros",
    "bigdecimal",
    "chrono",
    "any",
    "json"
] }
# SQLx uses Bigdecimal for Postgres, but it doesn't have serde enabled
bigdecimal = { version = "*", features = ["serde"] }
ring = "0.17.8"
rand = "0.8.5"
dotenv = "0.15.0"
strsim = "0.11.1"
ts-rs = { version = "8.1.0", features = [
    "bigdecimal",
    "bigdecimal-impl",
    "chrono",
    "chrono-impl",
    "uuid",
    "uuid-impl",
    "url",
    "url-impl",
    "serde_json",
    "serde-json-impl",
] }
sqlx-core = {version = "0.7.4", features = ["any"]}
chrono = {version="*", features = ["serde"]}
